--- a/app/src/main/res/layout/overlay_panel.xml
+++ b/app/src/main/res/layout/overlay_panel.xml
@@ -27,12 +27,11 @@
         android:background="#CC000000">
 
         <!-- W -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -50,9 +49,8 @@
 
         <!-- L -->
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:orientation="horizontal"
             android:gravity="center_vertical|end">
 
