--- a/app/src/main/res/layout/overlay_floating_button.xml
+++ b/app/src/main/res/layout/overlay_floating_button.xml
@@ -10,7 +10,7 @@
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:padding="10dp"
-        android:src="@drawable/btn_overlay"
+        android:src="@drawable/boton"
         android:scaleType="fitCenter"
         android:background="@drawable/floating_bg"
         android:contentDescription="chesz" />
