--- a/app/src/main/res/layout/overlay_floating_button.xml
+++ b/app/src/main/res/layout/overlay_floating_button.xml
@@ -9,9 +9,16 @@
         android:id="@+id/btn"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:padding="10dp"
         android:src="@android:drawable/ic_delete"
         android:scaleType="fitCenter"
-        android:background="@drawable/floating_bg"
-        android:contentDescription="chesz" />
+        android:contentDescription="chesz"
+    
+        android:scaleType="fitXY"
+    
+        android:adjustViewBounds="true"
+    
+        android:padding="0dp"
+    
+        android:background="@android:color/transparent"
+    />
 </FrameLayout>
