--- a/app/src/main/res/layout/overlay_floating_button.xml
+++ b/app/src/main/res/layout/overlay_floating_button.xml
@@ -3,15 +3,15 @@
     android:id="@+id/floatingRoot"
     android:layout_width="56dp"
     android:layout_height="56dp"
-    android:background="@android:color/transparent">
+    android:background="@null">
 
     <ImageView
         android:id="@+id/btn"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:padding="10dp"
+        android:padding="0dp"
         android:src="@drawable/btn_overlay"
         android:scaleType="fitCenter"
-        android:background="@drawable/floating_bg"
+        android:background="@null"
         android:contentDescription="chesz" />
 </FrameLayout>
