UI: anchor bubble+panel to bottom (panel grows up)

--- a/app/src/main/res/layout/overlay_root.xml
+++ b/app/src/main/res/layout/overlay_root.xml
@@ -17,7 +17,7 @@
         android:id="@+id/panelBubble"
         android:layout_width="10dp"
         android:layout_height="10dp"
-        android:layout_gravity="top|start"
+        android:layout_gravity="bottom|start"
         android:visibility="gone"
         android:orientation="vertical"
         android:paddingLeft="14dp"
