--- a/app/src/main/res/layout/overlay_root.xml
+++ b/app/src/main/res/layout/overlay_root.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rootOverlay"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="0dp"
-    android:clipChildren="false">
-
+    android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/panelBubble"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@android:drawable/toast_frame"
-        android:backgroundTint="#EE000000"
+        android:background="#CC000000"
         android:padding="10dp"
         android:layout_marginStart="60dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/stateText"
             android:layout_width="wrap_content"
@@ -23,17 +18,15 @@
             android:textColor="#FFFFFF"
             android:text="Estado: Listo" />
     </LinearLayout>
-
     <FrameLayout
         android:id="@+id/bubbleContainer"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@android:drawable/ic_menu_bg">
+        android:background="#444444">
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
-            android:src="@android:drawable/ic_dialog_info"
-            android:tint="#FFFFFF" />
+            android:src="@android:drawable/ic_dialog_info" />
     </FrameLayout>
 </FrameLayout>
